Added write info txt button to webGUI, changed tsu_info_getter functions to accept path params so you can use them as normal module functions, but they still use ROOTDIR and pre-generated dirnames in root when used as script (dirs_root set in if name main..), move_txt_to_appropriate_folder now also uses find_dir_simple, changed varnames using find_dir funcs to dirname instead of path since only the name is returned (to avoid confusion), getting info, writing tsutxt, moving to folder and checking folders for info txt were tested

--- a/templates/show_book_info.html
+++ b/templates/show_book_info.html
@@ -91,6 +91,7 @@
 		</div>
 		</div>
 	{% endif %}
+	{% if book_info.arist %}
 	<div class="book-line">
 	<div class="book-info">Artist</div>
 	<div class="book-data" id="Artist">
@@ -101,6 +102,7 @@
 		{% endfor %}
 	</div>
 	</div>
+	{% endif %}
 	{% if book_info.parody %}
 		<div class="book-line">
 		<div class="book-info">Parody</div>
@@ -153,9 +155,14 @@
 	Download on Tsumino
 	</a>
 
-	<a href="{{ url_for('update_book_by_id_onpage', book_id_onpage=book_info.id_onpage) }}" class="book-read-button button-stack red-color">
+	<a href="{{ url_for('update_book_by_id_onpage', book_id_onpage=book_info.id_onpage) }}" class="book-read-button button-stack green-color">
 	<i class="fas fa-spinner"></i>
 	Update Book
+	</a>
+
+	<a href="{{ url_for('write_info_txt_by_id', book_id_internal=book_info.id) }}" class="book-read-button button-stack red-color">
+	<i class="fas fa-file-alt"></i>
+	Write info.txt
 	</a>
 
 	<a href="/" id="backToIndex" class="book-read-button button-stack">
