Removed set_downloaded and set_favorite from manga_db.py to avoid confusion since they didnt set the li_ tags fixed bug where TRIGGERS set_last_change_tags for INSERT and DELETE both had the same name Download button in webGUI now opens tsumino dl page in new tab and sets downloaded to 1

--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,7 @@ h3              { color: #22a7f0; }
 .search-tags input {
 
 }
+.pink-color{background-color: #a233a5 !important} /* #a72aaa */
 .star-inactive {
     color: #fff !important;
 }
