--- a/templates/show_book_info.html
+++ b/templates/show_book_info.html
@@ -151,12 +151,24 @@
 	<a href={{ url_for('add_book_favorite', book_id_internal=book_info.id) }} id="btnFavoriteHandler" class="book-read-button button-stack dark-color"><i class="fa fa-plus"></i> Add to Favorite</a>
 	{% endif %}
 
-	<a href={{ 'http://www.tsumino.com/Download/Index/' ~ book_info.id_onpage }} id="btnDownloadEntry" class="book-read-button button-stack red-color">
+	{% if book_info.downloaded %}
+	<a href="" id="btnDownloadEntry" class="book-read-button button-stack green-color">
+	<i class="fas fa-check-circle"> </i>
+	Downloaded
+	</a>
+	{% else %}
+	{# able to open this link in a tab and book will be marked as downloaded while the new tab will be redirected to the dl page, setting downloaded to 0 should be done using the list edits, since pressing the dl button can happen on accident to easily #}
+	{# reload page when link is clicked (onclick=window.location.reload() ) so downloaded value gets updated -> but doesnt work when opened in new window, onclick=window.open(url, '_blank') [watch out that quotation marks get alternated etc.!] works but its a PopUp and has to be allowed first, but this is the only solution (with opening tsumino dl and displaying downloaded correctly) since just clicking and then going back after dl will also show old values (href to tsumino with _blank and reload -> flask wont get called at all) #}
+	{# works with href zu tsumino dl and target _blank mit onclick by assigning window.location.href (url of the current page) which doesnt require PopUp-privileges -> assigning url to window.location.href=url =^ redirect to url => redirect current window to set_dl (downloaded get set and page will display correct vals) and by href _blank a new tab will be opened to tsumino dl page BUT this wont work with open new tab/middle mouse click then it will just open the tsumino dl page #}
+	{# Ueber das Objekt location, das in der JavaScript-Objekthierarchie unterhalb des window-Objekts liegt, haben Sie Zugriff auf den vollstaendigen URI der aktuell angezeigten Web-Seite. Sie koennen den URI oder Teile davon zur Weiterverarbeitung abfragen und aendern. Beim Aendern fuehrt der Web-Browser einen Sprung zu einem neuen URI aus, genau so wie bei einem Verweis #}
+	{# onclick="window.location.href={{..}}" wont work since url needs to be encased by quotation marks -> onclick="window.location.href='{{..}}'" (then also alternate quotation marks #}
+	<a href="{{ "http://www.tsumino.com/Download/Index/" ~ book_info.id_onpage }}" target="_blank" id="btnDownloadEntry" class="book-read-button button-stack red-color" onclick="window.location.href='{{ url_for("set_dl", book_id_internal=book_info.id) }}'">
 	<i class="fa fa-arrow-circle-right"> </i>
 	Download on Tsumino
 	</a>
+	{% endif %}
 
-	<a href="{{ url_for('update_book_by_id_onpage', book_id_onpage=book_info.id_onpage) }}" class="book-read-button button-stack green-color">
+	<a href="{{ url_for('update_book_by_id_onpage', book_id_onpage=book_info.id_onpage) }}" class="book-read-button button-stack pink-color">
 	<i class="fas fa-sync-alt"></i>
 	Update Book
 	</a>
