handling 404 or connection prob when getting tsu info -> updated functions in manga_db etc. accordingly only one func/endpoint for showing book info now also showing Error msg when tsu info returns None in webGui

--- a/templates/show_book_info.html
+++ b/templates/show_book_info.html
@@ -224,7 +224,7 @@ Update Lists here!
 
 </div>
 {% else %}
-<div class="book-title">No book with {{ error_msg }} in DB!</div>
+<div class="book-title">{{ error_msg }}</div>
 {% endif %}
 </div>
 
